Explain this is an experimental, undocumented fork

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>CoffeeScript</title>
+  <title>Reflective CoffeeScript</title>
   <link rel="canonical" href="http://coffeescript.org" />
   <link rel="stylesheet" type="text/css" href="documentation/css/docs.css" />
   <link rel="stylesheet" type="text/css" href="documentation/css/idle.css" />
@@ -96,6 +96,8 @@
   <div class="container">
     <span class="bookmark" id="top"></span>
 
+    <p>This is an experimental fork adding reflective features to Coffeescript.   This is unsupported software at the moment so use at your own risk! Documentation is not ready yet, the rest of this page simply documents a version of CoffeeScript</p>
+    
     <p>
       <b>CoffeeScript is a little language that compiles into JavaScript.</b>
       Underneath that awkward Java-esque patina, JavaScript has always had
